--- a/pdf-theme/themes/el-theme.yml
+++ b/pdf-theme/themes/el-theme.yml
@@ -33,6 +33,7 @@ page:
   margin_inner: 0.75in
   margin_outer: 0.59in
   size: A4
+  columns: 2
 base:
   align: left
   # color as hex string (leading # is optional)
@@ -69,8 +70,8 @@ menu_caret_content: " <font size=\"1.15em\"><color rgb=\"b12146\">\u203a</color>
 heading:
   align: left
   #font_color: 181818
-  font_color: $base_font_color
-  font_family: $base_font_family
+  font_color: 2A6419 #$base_font_color
+  font_family: Brushtip
   font_style: bold
   # h1 is used for part titles (book doctype) or the doctitle (article doctype)
   h1_font_size: floor($base_font_size * 2.6)
