Update gradle file to use modern Asciidoctor stuff

--- a/build.gradle
+++ b/build.gradle
@@ -1,57 +1,115 @@
-import org.asciidoctor.gradle.jvm.AsciidoctorTask
-import java.text.SimpleDateFormat
-
 plugins {
-    id "org.asciidoctor.jvm.base" version "3.3.2"
-    id "org.asciidoctor.jvm.convert" version "3.3.2"
-    id "org.asciidoctor.jvm.pdf" version "3.3.2"
+    id 'org.asciidoctor.jvm.convert' version '3.3.2'
+    id 'org.asciidoctor.jvm.pdf' version '3.3.2'
 }
+
+defaultTasks 'clean', 'asciidoctor'
+
 repositories {
     mavenCentral()
 }
 
-asciidoctorj {
-    version = '2.5.3'
+configurations {
+    asciidocExtensions
 }
 
-class RenderTask extends AsciidoctorTask {
-    @Inject
-    RenderTask(WorkerExecutor we) {
-        super(we)
+dependencies {
+    // Needed to make the docExtensions work on Gradle 7.6, likely no longer needed when asciidoctor-gradle 4.0
+    asciidocExtensions gradleApi()
+}
 
-        forkOptions {
-            jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
+asciidoctorj {
+    version = '2.5.7'
+    modules {
+        pdf {
+            version '2.3.3'
         }
-
-        sourceDir = new File("./docs/")
-        baseDir = new File ("./docs/")
-        sources {
-            include "Rules Reference Guide.adoc"
-            include "index.adoc"
+        groovyDsl {
+            // Default of asciidoctor-gradle-plugin 3.3.2 depends on 2.0.0 which is not on Maven Central.
+            // Remove once newer version of the plugin is released.
+            // see also https://github.com/asciidoctor/asciidoctor-gradle-plugin/issues/620
+            version '2.0.2'
         }
+    }
+//    docExtensions {
+//        // Preprocessor for since/until roles in pdf backend (in html5 backed this is handled using CSS)
+//        preprocessor {
+//            document, reader ->
+//                if (document.options['backend'] != 'pdf') {
+//                    println 'skipping since/until preprocessor for non-PDF'
+//                    return
+//                }
+//                def pattern = ~/\[\.(since|until)\]_([^_]+?)_/
+//                def allLines = reader.readLines()
+//                def replacement = allLines.collect { line ->
+//                    def matcher = pattern.matcher(line)
+//                    if (matcher.find()) {
+//                        def buffer = new StringBuffer(line.length() + 16)
+//                        while (true) {
+//                            def replacement = matcher.group(1) == "since" ? /[.since]_**Since:** $2_/ : /[.until]_**Removed in:** $2_/
+//                            matcher.appendReplacement(buffer, replacement)
+//                            if (!matcher.find()) break;
+//                        }
+//                        matcher.appendTail(buffer)
+//                        return buffer.toString()
+//                    } else {
+//                        return line
+//                    }
+//                }
+//                reader.restoreLines(replacement)
+//        }
+//    }
+}
 
-        outputDir = new File("./build/")
-        outputOptions {
-            separateOutputDirs = false
-            backends 'pdf', 'html'
-        }
+asciidoctor {
+    configurations 'asciidocExtensions'
+    baseDirFollowsSourceDir()
+    sourceDir = new File("./docs/")
+    baseDir = new File ("./docs/")
 
+    outputDir = new File("./build/")
 
-        attributes = [
-                'icons'             : 'font',
-                'version-label'     : '',
-                'currentDate'       : '',
-                'language'          : 'EN',
-                'imagesdir'         : 'images',
-                'pdf-stylesdir'     : '../pdf-theme/themes',
-                'pdf-fontsdir'      : '../pdf-theme/fonts',
-                'pdf-style'         : 'el'
-        ]
+    sources {
+        include '*.adoc'
+    }
+    attributes 'revnumber': null,
+            'stylesdir': file('src/docs/theme/jaybird-html'), 'stylesheet': 'firebird.css',
+            'docinfo': 'shared', 'docinfodir': file('src/docs/theme/jaybird-html/docinfo')
+    forkOptions {
+        jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
     }
 }
 
-
-task renderRulesDocuments(type: RenderTask) {
+pdfThemes {
+    local 'el', {
+        themeDir = file('pdf-theme/themes/')
+        themeName = 'el'
+    }
 }
 
-defaultTasks "renderRulesDocuments"
+asciidoctorPdf {
+    configurations 'asciidocExtensions'
+    baseDirFollowsSourceDir()
+    sourceDir = new File("./docs/")
+    baseDir = new File ("./docs/")
+
+    outputDir = new File("./build/")
+    sources {
+        include '*.adoc'
+    }
+
+    attributes 'revnumber': null, 'source-highlighter': 'rouge', 'media': 'prepress',
+            'compress': '', 'icon-set': 'font', 'pdf-fontsdir': "${file('pdf-theme/fonts')},GEM_FONTS_DIR"
+    theme 'el'
+    forkOptions {
+        jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
+    }
+}
+
+// Create the HTML and PDF output and copy them to the build/pages folder
+// Primarily intended for the travis-ci build to deploy to GitHub pages
+tasks.register('generateRulesDocuments') {
+    dependsOn asciidoctor, asciidoctorPdf
+}
+
+defaultTasks "generateRulesDocuments"
