--- a/pdf-theme/themes/el-theme.yml
+++ b/pdf-theme/themes/el-theme.yml
@@ -34,6 +34,8 @@ page:
   margin_outer: 1.1cm
   size: A4
   columns: 2
+  numbering:
+    start_at: toc
 base:
   align: left
   # color as hex string (leading # is optional)
@@ -203,6 +205,22 @@ toc:
     #content: ". "
     font_color: a9a9a9
     #levels: 2 3
-running_content:
-  start_at: toc
+  break-after: auto
+running-content:
+  start-at: toc
 # NOTE in addition to footer, header is also supported
+footer:
+  font_size: $base_font_size_small * 0.9
+  # NOTE if background_color is set, background and border will span width of page
+  border_color: eeeeee
+  border_width: 0.25
+  height: $base_line_height_length * 2.5
+  line_height: 1
+  padding: [$base_line_height_length / 2, 1, 0, 1]
+  vertical_align: top
+  recto:
+    center:
+      content: 'Version {document-version} | Page {page-number}'
+  verso:
+    center:
+      content: $footer_recto_center_content
