--- a/build.gradle
+++ b/build.gradle
@@ -70,8 +70,8 @@ asciidoctorPdf {
         include '*.adoc'
     }
 
-    attributes 'revnumber': null, 'source-highlighter': 'rouge', 'media': 'prepress',
-            'compress': '', 'icon-set': 'font', 'pdf-fontsdir': "${file('pdf-theme/fonts')},GEM_FONTS_DIR"
+    attributes 'revnumber': null, 'source-highlighter': 'rouge', 'media': 'screen',
+            'compress': '', 'icons': 'font', 'icon-set': 'fas', 'pdf-fontsdir': "${file('pdf-theme/fonts')},GEM_FONTS_DIR"
     theme 'el'
     forkOptions {
         jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
