--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,7 @@ asciidoctor {
     sources {
         include '*.adoc'
     }
-    attributes 'revnumber': null,
-            'stylesdir': file('src/docs/theme/jaybird-html'), 'stylesheet': 'firebird.css',
+    attributes 'stylesdir': file('src/docs/theme/jaybird-html'), 'stylesheet': 'firebird.css',
             'docinfo': 'shared', 'docinfodir': file('src/docs/theme/jaybird-html/docinfo')
     forkOptions {
         jvmArgs "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED", "--add-opens", "java.base/java.io=ALL-UNNAMED"
@@ -68,7 +67,7 @@ asciidoctorPdf {
         include '*.adoc'
     }
 
-    attributes 'revnumber': null, 'source-highlighter': 'rouge', 'media': 'screen',
+    attributes 'source-highlighter': 'rouge', 'media': 'screen',
             'compress': '', 'icons': 'font', 'icon-set': 'fas', 'pdf-fontsdir': "${file('pdf-theme/fonts')},GEM_FONTS_DIR"
     theme 'el'
     forkOptions {
