Add small EmeraldDB role

--- a/pdf-theme/themes/el-theme.yml
+++ b/pdf-theme/themes/el-theme.yml
@@ -65,6 +65,10 @@ role:
   emeralddb:
     font_family: EmeraldDB
     font_size: 18
+  emeralddbsm:
+    font_family: EmeraldDB
+    font_size: 8
+
 # correct line height for Noto Serif metrics (comes with built-in line height)
 vertical_rhythm: $base_line_height_length
 horizontal_rhythm: $base_line_height_length
